--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ font: 26px;
 margin-left: 25%;
 }
 h1{
-margin:0;
+margin:0px;
 display:inline-block;
 }
 img{
@@ -18,9 +18,15 @@ nav{
     border-style:double;
 }
 ul{
-    padding:0;
+    padding:0px;
     margin-left:25%
 }
+li{
+    font-size:0px;
+    display:inline-block;
+    padding-right:20px;
+}
+
 
 
 
